--- a/BlogEmi/BlogEmi.csproj
+++ b/BlogEmi/BlogEmi.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\img\" />
+    <Folder Include="wwwroot\assets\fonts\" />
+  </ItemGroup>
+
 </Project>
